[metadata]
name = pytools 
version = 0.0.1
author = Johan Carlsen
author_email = johan_carlsen@hotmail.com
description = Helpful tools to use with python 
long_description = file: README.md 
license = MIT

[options]
zip_safe = False 
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    matplotlib
    scipy
